--- a/style.css
+++ b/style.css
@@ -80,11 +80,16 @@ body {
   z-index: 1;
   transform: translateY(-50%);
   transition: all 0.2s;
+
+  animation: slide-back .2s;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in .2s forwards;
 }
 
 #switch span {
@@ -158,15 +163,32 @@ footer {
   font-size: 14px;
 }
 
-
 /* MEDIA QUERIES */
 @media (min-width: 700px) {
-
   :root {
-    --bg-url: url(./assets/bg-desktop.jpg)
+    --bg-url: url(./assets/bg-desktop.jpg);
   }
 
   .light {
-    --bg-url: url(./assets/bg-desktop-light.jpg)
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/* ANIMATION */
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to{
+    left: 0;
   }
 }
